# query-processing

./: CMakeLists.txt  Readme.org  explanation.txt
Benchmarks/: ShapeCountBenchmarks.cpp
Dependencies/: Edge.hpp  GraphGen_notSorted.cpp  GraphGen_notSorted.hpp  GraphGen_sorted.cpp  PaRMAT_vector.cpp  PaRMAT_vector.hpp  internal_config.hpp
Source/: ShapeCount.c  ShapeCount.hpp
Tests/: ShapeCountTests.cpp
